--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,7 @@
 {
     "development": {
         "username": "root",
-<<<<<<< HEAD
-        "password": "password",
-=======
-        "password": "mySQLpassword2020",
->>>>>>> 4a6b63bc6e60902383fdcf96f68d5231efa2aa13
+        "password": "Drewski419",
         "database": "NoGym",
         "host": "127.0.0.1",
         "dialect": "mysql"
