--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,13 @@
 {
     "development": {
         "username": "root",
-        "password": "Bootcamp2020",
+        "password": "mySQLpassword2020",
         "database": "NoGym",
         "host": "127.0.0.1",
         "dialect": "mysql"
     },
-    "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
-        "dialect": "mysql"
-    },
     "production": {
-        "username": "root",
-        "password": null,
-        "database": "database_production",
-        "host": "127.0.0.1",
+        "use_env_variable": "JAWSDB_URL",
         "dialect": "mysql"
     }
 }
